protocols/tests/identities/identity_d0/passthrough_combdep.out
error: Cannot perform ASSIGNED FORBIDDEN PORT on DontCare value in Cannot assign to input 'a' after observing a dependent output
  ┌─ identities/identity_d0/identity_d0.prot:1:1
  │
1 │ struct Identity {
  │ ^ Cannot perform ASSIGNED FORBIDDEN PORT on DontCare value in Cannot assign to input 'a' after observing a dependent output

